--- a/SoundVision/Base.lproj/Main.storyboard
+++ b/SoundVision/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -21,15 +21,15 @@
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" text="SoundVision" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
                                 <rect key="frame" x="199" y="28" width="202" height="42"/>
-                                <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <accessibility key="accessibilityConfiguration" hint="Toggle Button in Middle of Page" identifier="Title" label="Start/Stop Page"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xzZ-Qs-nt2">
                                 <rect key="frame" x="126" y="89" width="349" height="421"/>
-                                <animations/>
+                                <accessibility key="accessibilityConfiguration" hint="Starts and Stops Sound" identifier="Button" label="Toggle Sound Vison"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="421" id="bS2-er-4rC"/>
                                 </constraints>
@@ -41,7 +41,6 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="6BV-lF-sBN"/>
@@ -74,7 +73,6 @@
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" text="About" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
                                 <rect key="frame" x="253" y="20" width="95" height="42"/>
-                                <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -83,6 +81,7 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lj0-k8-JiF">
                                 <rect key="frame" x="180" y="136" width="240" height="267"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <accessibility key="accessibilityConfiguration" label="About the App"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="4oS-m1-B9W"/>
                                     <constraint firstAttribute="height" constant="267" id="kgK-8F-1eY"/>
@@ -106,8 +105,10 @@ Please note that the app does not work when the device is locked. It needs to be
                                 </variation>
                             </textView>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <accessibility key="accessibilityConfiguration" label="About Page">
+                            <bool key="isElement" value="YES"/>
+                        </accessibility>
                         <constraints>
                             <constraint firstItem="Lj0-k8-JiF" firstAttribute="top" secondItem="zEq-FU-wV5" secondAttribute="bottom" constant="10" id="4Eh-dM-tbf"/>
                             <constraint firstItem="zEq-FU-wV5" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" constant="10" id="DIm-7c-LAZ"/>
@@ -142,7 +143,6 @@ Please note that the app does not work when the device is locked. It needs to be
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                        <animations/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
@@ -172,7 +172,9 @@ Please note that the app does not work when the device is locked. It needs to be
                                 <subviews>
                                     <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1500" minValue="0.0" maxValue="3000" translatesAutoresizingMaskIntoConstraints="NO" id="ltM-gu-vM3">
                                         <rect key="frame" x="18" y="115" width="285" height="31"/>
-                                        <animations/>
+                                        <accessibility key="accessibilityConfiguration" hint="Slide Left for Minimum Frequency" label="Minimum Frequency Slider">
+                                            <accessibilityTraits key="traits" adjustable="YES"/>
+                                        </accessibility>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="cyE-xk-u8U"/>
                                         </constraints>
@@ -182,7 +184,9 @@ Please note that the app does not work when the device is locked. It needs to be
                                     </slider>
                                     <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1.5" minValue="0.0" maxValue="3" translatesAutoresizingMaskIntoConstraints="NO" id="7Tb-3H-xVM">
                                         <rect key="frame" x="18" y="410" width="285" height="31"/>
-                                        <animations/>
+                                        <accessibility key="accessibilityConfiguration" hint="Slide left for 0 second slide right for up to 3 second scan time" label="Speed Slider">
+                                            <accessibilityTraits key="traits" adjustable="YES"/>
+                                        </accessibility>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="Sz1-9B-LEf"/>
                                         </constraints>
@@ -190,20 +194,9 @@ Please note that the app does not work when the device is locked. It needs to be
                                             <action selector="speedSet:" destination="gcO-NY-1Kw" eventType="valueChanged" id="r3M-a7-BEt"/>
                                         </connections>
                                     </slider>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Minimum Frequency:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n5O-f9-bQv">
-                                        <rect key="frame" x="20" y="86" width="161" height="21"/>
-                                        <animations/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="RQx-P4-Ao2"/>
-                                            <constraint firstAttribute="width" constant="161" id="iAS-PR-uIY"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Maximum Frequency:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J7a-n2-W9c">
                                         <rect key="frame" x="20" y="220" width="166" height="21"/>
-                                        <animations/>
+                                        <accessibility key="accessibilityConfiguration" hint="Toggle using slider below" label="Maximum Frequency"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="EMI-dN-e8B"/>
                                             <constraint firstAttribute="width" constant="166" id="Fuz-EK-5bp"/>
@@ -214,7 +207,7 @@ Please note that the app does not work when the device is locked. It needs to be
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Speed:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zzJ-hc-NlN">
                                         <rect key="frame" x="20" y="381" width="55" height="21"/>
-                                        <animations/>
+                                        <accessibility key="accessibilityConfiguration" label="Speed"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="55" id="1up-m8-9We"/>
                                             <constraint firstAttribute="height" constant="21" id="q6K-uz-eLe"/>
@@ -225,28 +218,27 @@ Please note that the app does not work when the device is locked. It needs to be
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qvU-Wg-3Ji">
                                         <rect key="frame" x="172" y="86" width="129" height="21"/>
-                                        <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xYy-Ew-maq">
                                         <rect key="frame" x="172" y="220" width="129" height="21"/>
-                                        <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0.0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AED-EQ-AEd">
                                         <rect key="frame" x="172" y="381" width="129" height="21"/>
-                                        <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="3500" minValue="2000" maxValue="5000" translatesAutoresizingMaskIntoConstraints="NO" id="ccV-RZ-1ni">
                                         <rect key="frame" x="18" y="249" width="285" height="31"/>
-                                        <animations/>
+                                        <accessibility key="accessibilityConfiguration" hint="Slide right for maximimum freqeuncy of 5000" label="Maximum Frequency Slide">
+                                            <accessibilityTraits key="traits" adjustable="YES"/>
+                                        </accessibility>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="JNd-4I-ZpG"/>
                                         </constraints>
@@ -256,14 +248,26 @@ Please note that the app does not work when the device is locked. It needs to be
                                     </slider>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6AC-Af-kUM">
                                         <rect key="frame" x="92" y="0.0" width="137" height="54"/>
-                                        <animations/>
                                         <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Minimum Frequency:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n5O-f9-bQv">
+                                        <rect key="frame" x="20" y="86" width="161" height="21"/>
+                                        <accessibility key="accessibilityConfiguration" hint="Slider Below this Tab" label="Minimum Frequency"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="RQx-P4-Ao2"/>
+                                            <constraint firstAttribute="width" constant="161" id="iAS-PR-uIY"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
-                                <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <bool key="isElement" value="YES"/>
+                                </accessibility>
                                 <constraints>
                                     <constraint firstItem="ccV-RZ-1ni" firstAttribute="top" secondItem="J7a-n2-W9c" secondAttribute="bottom" constant="8" symbolic="YES" id="0S7-pD-cBF"/>
                                     <constraint firstItem="J7a-n2-W9c" firstAttribute="leading" secondItem="ccV-RZ-1ni" secondAttribute="leading" id="0w8-37-thO"/>
@@ -298,7 +302,6 @@ Please note that the app does not work when the device is locked. It needs to be
                                 </constraints>
                             </view>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="jjZ-0z-Kwq" firstAttribute="leading" secondItem="ZL9-Mc-qsj" secondAttribute="leadingMargin" constant="10" id="2gr-hB-CFE"/>
